--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,187 @@
+.container{
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputContainer h1{
+  font-family: 'Playfair Display SC', serif;
+  font-size: 3.5rem;
+  color: white;
+  margin-bottom: 1.5rem;
+}
+
+.inputContainer h1 span{
+  color : var(--primary-color);
+}
+
+.inputContainer div {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.inputContainer input {
+  width: 100%;
+  padding: 0.5rem 0.2rem 0.5rem 0;
+  text-indent: 1rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  
+}
+
+.inputContainer input::placeholder{
+  font-size: 0.9rem;
+}
+
+.inputContainer button{
+  padding: 0 1rem;
+  height: 3rem;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  color: white;
+  background-color: var(--primary-color);
+  border: none;
+  cursor: pointer;
+}
+
+.result{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
+}
+
+.result p{
+  color : white;
+  border: 1px solid var(--primary-color);
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+}
+
+.result button{
+  padding: 0.5rem 1rem;
+  color: whitesmoke;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  border: none;
+}
+
+.result button.copied{
+  background-color: white;
+  color: var(--primary-color);
+}
+
+.noData {
+  color: white;
+  font-size: 1rem;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+}
+
+.background {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: #4e54c8;
+  overflow: hidden;
+  z-index: -1;
+}
+
+.background li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 32s linear infinite;
+}
+
+
+
+
+.background li:nth-child(0) {
+  left: 16%;
+  width: 75px;
+  height: 75px;
+  bottom: -75px;
+  animation-delay: 1s;
+}
+
+.background li:nth-child(1) {
+  left: 70%;
+  width: 96px;
+  height: 96px;
+  bottom: -96px;
+  animation-delay: 1s;
+}
+
+.background li:nth-child(2) {
+  left: 74%;
+  width: 92px;
+  height: 92px;
+  bottom: -92px;
+  animation-delay: 2s;
+}
+
+.background li:nth-child(3) {
+  left: 62%;
+  width: 70px;
+  height: 70px;
+  bottom: -70px;
+  animation-delay: 8s;
+}
+
+.background li:nth-child(4) {
+  left: 86%;
+  width: 72px;
+  height: 72px;
+  bottom: -72px;
+  animation-delay: 2s;
+}
+
+.background li:nth-child(5) {
+  left: 87%;
+  width: 110px;
+  height: 110px;
+  bottom: -110px;
+  animation-delay: 2s;
+}
+
+.background li:nth-child(6) {
+  left: 8%;
+  width: 82px;
+  height: 82px;
+  bottom: -82px;
+  animation-delay: 23s;
+}
+
+
+
 .App {
   text-align: center;
 }
